--- a/CustomOnChipDebuggerConsoleApp/CustomOnChipDebuggerConsoleApp.csproj
+++ b/CustomOnChipDebuggerConsoleApp/CustomOnChipDebuggerConsoleApp.csproj
@@ -45,30 +45,31 @@
     <Compile Include="DebugTarget.cs" />
     <Compile Include="Errno.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="FTDI4232HJtag.cs" />
     <Compile Include="GDBPacket.cs" />
     <Compile Include="GDBSession.cs" />
     <Compile Include="IDebugTarget.cs" />
+    <Compile Include="IJtag.cs" />
+    <Compile Include="IRISCVDMIInterface.cs" />
+    <Compile Include="IRISCVDmiJtagCommand.cs" />
     <Compile Include="IRiscvJtagDriver.cs" />
     <Compile Include="JTAGEnums.cs" />
+    <Compile Include="JtagTapStates.cs" />
     <Compile Include="NetworkServer.cs" />
     <Compile Include="RISCVCPU.cs" />
+    <Compile Include="RISCVDMIController.cs" />
     <Compile Include="RISCVJtagDebugger.cs" />
+    <Compile Include="RV32RegisterAddress.cs" />
     <Compile Include="Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FTD2XX_NET, Version=1.0.14.39395, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FTD2XX_NET.1.0.14\lib\net40\FTD2XX_NET.dll</HintPath>
     </Reference>
-    <Reference Include="LibUsbDotNet.LibUsbDotNet, Version=2.2.0.0, Culture=neutral, PublicKeyToken=c677239abe1e02a9, processorArchitecture=MSIL">
-      <HintPath>..\packages\LibUsbDotNet.2.2.29\lib\net45\LibUsbDotNet.LibUsbDotNet.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.7.0.0\lib\netstandard2.0\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="StilSoft.Communication.Ftdi, Version=1.0.13.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\StilSoft.Communication.Ftdi.1.0.13\lib\net46\StilSoft.Communication.Ftdi.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
