--- a/CustomOnChipDebuggerConsoleApp/packages.config
+++ b/CustomOnChipDebuggerConsoleApp/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FTD2XX_NET" version="1.0.14" targetFramework="net461" />
-  <package id="LibUsbDotNet" version="2.2.29" targetFramework="net461" />
+  <package id="Device.Net" version="4.3.0-beta" targetFramework="net48" />
+  <package id="Hid.Net" version="4.3.0-beta" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net461" />
-  <package id="StilSoft.Communication.Ftdi" version="1.0.13" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net461" />
-  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net461" />
-  <package id="System.Text.Json" version="7.0.2" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.5.1" targetFramework="net48" />
+  <package id="System.Text.Json" version="2.0.0.11" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
+  <package id="Usb.Net" version="4.3.0-beta" targetFramework="net48" />
 </packages>
